# ygruq

./: Application.hs  Foundation.hs  Import.hs  LICENSE  Model.hs  Settings.hs  devel.hs  ygruq.cabal  ygruq.sqlite3
Handler/: Home.hs  Logendar.hs  Quote.hs
Model/: Quote.hs  Tarball.hs
Yesod/: Pagination.hs
config/: models  routes  sqlite.yml
deploy/: Procfile
static/css/: bootstrap.css
templates/: default-layout-wrapper.hamlet  homepage.hamlet  homepage.lucius  logendar.hamlet  normalize.lucius  quote-create.hamlet  quote-list-wrapper.hamlet  quote-list-wrapper.lucius  quote-list.hamlet  quote-show.hamlet  quote-version.hamlet  quote-version.lucius
